HTML 뼈대만 잡아 놓기

--- a/templates/main.html
+++ b/templates/main.html
@@ -2,9 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>가위 바위 보 게임 웹 버전</title>
 </head>
 <body>
+
+<h1>가위 바위 보 게임 웹 버전</h1>
+
+<div>
+    <select name="">
+        <option value="">가위 바위 보</option>
+        <option value="s">가위</option>
+        <option value="r">바위</option>
+        <option value="p">보</option>
+    </select>
+    <input type="submit" value="제출">
+</div>
+
+<div>
+    사용자 : 가위 컴퓨터 : 바위 졌습니다.
+</div>
+
+<div>
+    승 : 4 무 : 6 패 : 5
+</div>
+
+<div>
+    <table>
+        <tr>
+            <td>#</td>
+            <td>컴퓨터</td>
+            <td>사용자</td>
+            <td>결과</td>
+        </tr>
+        <tr>
+            <td>#</td>
+            <td>컴퓨터</td>
+            <td>사용자</td>
+            <td>결과</td>
+        </tr>
+    </table>
+</div>
 
 </body>
 </html>
