--- a/templates/main.html
+++ b/templates/main.html
@@ -3,47 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>가위 바위 보 게임 웹 버전</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
 <h1>가위 바위 보 게임 웹 버전</h1>
 
-<div>
-    <form action="" method="post">
-    <select name="guest">
+<div class="mb-2">
+    <form action="" method="post" class="input-group">
+    <select name="guest" class="form-select">
         <option value="">가위 바위 보</option>
         <option value="가위">가위</option>
         <option value="바위">바위</option>
         <option value="보">보</option>
     </select>
-    <input type="submit" value="제출">
+    <input type="submit" value="제출" class="btn btn-primary">
     </form>
 </div>
 
-<div>{{ data.msg }}</div>
+<div class="mb-2">{{ data.msg }}</div>
 
 <div>
-    승 : {{ data.w }} 무 : {{ data.d }} 패 : {{ data.l }}
+    <span class="btn btn-primary">승 : {{ data.w }}</span>
+    <span class="btn btn-primary">무 : {{ data.d }}</span>
+    <span class="btn btn-primary">패 : {{ data.l }}</span>
 </div>
 
 <div>
-    <table>
+    <table  class="table">
+    <thead>
         <tr>
-            <td>#</td>
-            <td>컴퓨터</td>
-            <td>사용자</td>
-            <td>결과</td>
+            <th scope="col">#</td>
+            <th scope="col">컴퓨터</td>
+            <th scope="col">사용자</td>
+            <th scope="col">결과</td>
         </tr>
-
+    </thead>
+      <tbody>
 
     {% for element in data.gh %}
             <tr>
-            <td>{{ element.id }}</td>
+            <td scope="row">{{ element.id }}</td>
             <td>{{ element.user_choice }}</td>
             <td>{{ element.computer_choice }}</td>
             <td>{{ element.result }}</td>
         </tr>
     {% endfor %}
+      </tbody>
 
 
     </table>
