--- a/templates/main.html
+++ b/templates/main.html
@@ -6,10 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<div class="container">
 
-<h1>가위 바위 보 게임 웹 버전</h1>
+    <h1>가위 바위 보 게임 웹 버전</h1>
 
-<div class="mb-2">
+    <div class="mb-2">
     <form action="" method="post" class="input-group">
     <select name="guest" class="form-select">
         <option value="">가위 바위 보</option>
@@ -23,20 +24,20 @@
 
 <div class="mb-2">{{ data.msg }}</div>
 
-<div>
-    <span class="btn btn-primary">승 : {{ data.w }}</span>
-    <span class="btn btn-primary">무 : {{ data.d }}</span>
-    <span class="btn btn-primary">패 : {{ data.l }}</span>
+<div class="mb-2">
+    <span class="col btn btn-primary">승 : {{ data.w }}</span>
+    <span class="col btn btn-primary">무 : {{ data.d }}</span>
+    <span class="col btn btn-primary">패 : {{ data.l }}</span>
 </div>
 
-<div>
+<div  class="mb-2">
     <table  class="table">
     <thead>
         <tr>
-            <th scope="col">#</td>
-            <th scope="col">컴퓨터</td>
-            <th scope="col">사용자</td>
-            <th scope="col">결과</td>
+            <th scope="col">#</th>
+            <th scope="col">컴퓨터</th>
+            <th scope="col">사용자</th>
+            <th scope="col">결과</th>
         </tr>
     </thead>
       <tbody>
@@ -54,6 +55,9 @@
 
     </table>
 </div>
+
+</div>
+
 
 </body>
 </html>
